tests/paczka1/fuzzy1/57300749.err
Error in line 9: gHBuXloh S590 19,8
Error in line 30: 8Mq A505 71,1
